--- a/src/components/MovieCards/MovieCards.css
+++ b/src/components/MovieCards/MovieCards.css
@@ -68,6 +68,12 @@
   height: 100%;
 }
 
+.movie-poster-img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  border-radius: 8px 8px 0 0;
+}
 .movie-content {
   flex: 1;
   padding: 16px;
